--- a/assets/templates/episode_config_tables.html
+++ b/assets/templates/episode_config_tables.html
@@ -196,7 +196,7 @@
                                        class="row-border hover">
                                     <thead>
 
-                                    <th>Speaker/Season</th>
+                                    <th>Speaker/Scene</th>
                                     <th ng-repeat="n in [] | range:selectedEpisode.number_of_scenes+1">{{n}}</th>
 
                                     </thead>
