--- a/assets/templates/tv_show_grafics.html
+++ b/assets/templates/tv_show_grafics.html
@@ -152,7 +152,7 @@
                             <h3><span class="label label-info">Speech Length Distribution</span></h3>
                         </div>
                         <div class="col-md-12 bar-chart" id="bar-chart-season-replic-length">
-                            <nvd3 options="basicBarOptions" data="tvShowReplicaLengths"></nvd3>
+                            <nvd3 options="basicBarOptions" data="tvShowReplicaLengthsSlice"></nvd3>
                         </div>
                         <div class="col-md-12 bar-chart">
                             <md-button class="md-raised" ng-click="downloadReplicaCSV()">Download as CSV</md-button>
