speach length download season

--- a/assets/templates/single_speaker_statistics.html
+++ b/assets/templates/single_speaker_statistics.html
@@ -172,11 +172,11 @@
                                             </tr>
                                             <tr>
                                                 <td>Average Replic Length:</td>
-                                                <td>{{selectedSpeaker.replicas_length_avg}}</td>
+                                                <td>{{(selectedSpeaker.replicas_length_avg).toFixed(2)}}</td>
                                             </tr>
                                             <tr>
                                                 <td>Median Replic Length:</td>
-                                                <td>{{selectedSpeaker.replicas_length_med}}</td>
+                                                <td>{{(selectedSpeaker.replicas_length_med).toFixed(2)}}</td>
                                             </tr>
                                         </table>
                                     </td>
