--- a/assets/templates/single_speaker_statistics.html
+++ b/assets/templates/single_speaker_statistics.html
@@ -144,15 +144,15 @@
                                                 <td>{{selectedSpeaker.name}}</td>
                                             </tr>
                                             <tr>
-                                                <td>Number Of Replicas:</td>
+                                                <td>Number Of Speechs:</td>
                                                 <td>{{selectedSpeaker.number_of_replicas}}</td>
                                             </tr>
                                             <tr>
-                                                <td>Longest Replic:</td>
+                                                <td>Longest Speech:</td>
                                                 <td>{{selectedSpeaker.replicas_length_max}}</td>
                                             </tr>
                                             <tr>
-                                                <td>Shortest Replic:</td>
+                                                <td>Shortest Speech:</td>
                                                 <td>{{selectedSpeaker.replicas_length_min}}</td>
                                             </tr>
 
@@ -162,7 +162,7 @@
                                         <table st-table="rowCollection" class="table table-striped speaker-info-table">
 
                                             <tr>
-                                                <td>Percentage Of Replics In Show:</td>
+                                                <td>Percentage Of Speechs In Show:</td>
                                                 <td>{{((selectedSpeaker.replik_percentage)*100).toFixed(2)}} %</td>
                                             </tr>
 
@@ -171,11 +171,11 @@
                                                 <td>{{((selectedSpeaker.word_percentage)*100).toFixed(2)}} %</td>
                                             </tr>
                                             <tr>
-                                                <td>Average Replic Length:</td>
+                                                <td>Average Speech Length:</td>
                                                 <td>{{(selectedSpeaker.replicas_length_avg).toFixed(2)}}</td>
                                             </tr>
                                             <tr>
-                                                <td>Median Replic Length:</td>
+                                                <td>Median Speech Length:</td>
                                                 <td>{{(selectedSpeaker.replicas_length_med).toFixed(2)}}</td>
                                             </tr>
                                         </table>
@@ -212,7 +212,7 @@
                 </div>
 
                 <div class="panel panel-default" ng-if="replicaLengths">
-                    <div class="panel-heading">Replica Length Distribution</div>
+                    <div class="panel-heading">Speech Length Distribution</div>
                     <div class="panel-body">
 
                         <div class="row speaker-info-grafics">
@@ -220,7 +220,7 @@
                                 <nvd3 options="speechLengthDistributionOptions" data="replicaLengths"></nvd3>
                             </div>
                         </div>
-                        <md-button class="md-raised" ng-click="downloadReplicaCSV()">Download as CSV</md-button>
+                        <md-button class="md-raised" ng-click="downloadSpeechCSV()">Download as CSV</md-button>
                     </div>
                 </div>
 
@@ -246,20 +246,20 @@
                 </div>
 
                 <div class="panel panel-default linechart-panel" ng-if="speakerSeasonStats">
-                    <div class="panel-heading">Speaker Season Replic Stats</div>
+                    <div class="panel-heading">Speaker Season Speech Stats</div>
                     <div class="panel-body">
 
                         <div class="row">
                             <div class="col-md-4">
-                                <nvd3 options="linechartOptionsReplicaAvg" data="replicaAverageSeasons"
+                                <nvd3 options="linechartOptionsSpeechAvg" data="replicaAverageSeasons"
                                       class="with-3d-shadow with-transitions"></nvd3>
                             </div>
                             <div class="col-md-4">
-                                <nvd3 options="linechartOptionsReplicaNumber" data="replicaNumberSeasons"
+                                <nvd3 options="linechartOptionsSpeechNumber" data="replicaNumberSeasons"
                                       class="with-3d-shadow with-transitions"></nvd3>
                             </div>
                             <div class="col-md-4">
-                                <nvd3 options="linechartOptionsReplicaSum" data="replicaSumSeasons"
+                                <nvd3 options="linechartOptionsSpeechSum" data="replicaSumSeasons"
                                       class="with-3d-shadow with-transitions"></nvd3>
                             </div>
                         </div>
@@ -267,20 +267,20 @@
                 </div>
 
                 <div class="panel panel-default linechart-panel" ng-if="speakerEpisodeStats">
-                    <div class="panel-heading">Speaker Episode Replic Stats</div>
+                    <div class="panel-heading">Speaker Episode Speech Stats</div>
                     <div class="panel-body">
 
                         <div class="row">
                             <div class="col-md-4">
-                                <nvd3 options="linechartOptionsReplicaAvgEpi" data="replicaAverageEpisodes"
+                                <nvd3 options="linechartOptionsSpeechAvgEpi" data="replicaAverageEpisodes"
                                       class="with-3d-shadow with-transitions"></nvd3>
                             </div>
                             <div class="col-md-4">
-                                <nvd3 options="linechartOptionsReplicaNumberEpi" data="replicaNumberEpisodes"
+                                <nvd3 options="linechartOptionsSpeechNumberEpi" data="replicaNumberEpisodes"
                                       class="with-3d-shadow with-transitions"></nvd3>
                             </div>
                             <div class="col-md-4">
-                                <nvd3 options="linechartOptionsReplicaSumEpi" data="replicaSumEpisodes"
+                                <nvd3 options="linechartOptionsSpeechSumEpi" data="replicaSumEpisodes"
                                       class="with-3d-shadow with-transitions"></nvd3>
                             </div>
                         </div>
