speach length download season

--- a/assets/templates/single_speaker_statistics.html
+++ b/assets/templates/single_speaker_statistics.html
@@ -144,7 +144,7 @@
                                                 <td>{{selectedSpeaker.name}}</td>
                                             </tr>
                                             <tr>
-                                                <td>Number Of Speechs:</td>
+                                                <td>Number Of Speeches:</td>
                                                 <td>{{selectedSpeaker.number_of_replicas}}</td>
                                             </tr>
                                             <tr>
@@ -162,7 +162,7 @@
                                         <table st-table="rowCollection" class="table table-striped speaker-info-table">
 
                                             <tr>
-                                                <td>Percentage Of Speechs In Show:</td>
+                                                <td>Percentage Of Speeches In Show:</td>
                                                 <td>{{((selectedSpeaker.replik_percentage)*100).toFixed(2)}} %</td>
                                             </tr>
 
