--- a/assets/templates/episode_config_tables.html
+++ b/assets/templates/episode_config_tables.html
@@ -152,7 +152,7 @@
                                         <th>Shortest speech</th>
                                         <th>Average speech length</th>
                                         <th>Speech length median</th>
-                                        <th>Total length of replics</th>
+                                        <th>Total length of speeches</th>
                                         <th>Tv show speech percentage</th>
                                         <th>Tv show word percentage</th>
                                         <th>Appeared in scenes</th>
