--- a/assets/templates/season_config_tables.html
+++ b/assets/templates/season_config_tables.html
@@ -44,15 +44,15 @@
                                                     <td>{{selectedSeason.season_number}}</td>
                                                 </tr>
                                                 <tr>
-                                                    <td>Configuration Density:</td>
+                                                    <td>Configuration density:</td>
                                                     <td>{{(selectedSeason.configuration_density).toFixed(2)}}</td>
                                                 </tr>
                                                 <tr>
-                                                    <td>Number of Episodes:</td>
+                                                    <td>Number of episodes:</td>
                                                     <td>{{selectedSeason.number_of_episodes}}</td>
                                                 </tr>
                                                 <tr>
-                                                    <td>Number of Speakers:</td>
+                                                    <td>Number of speakers:</td>
                                                     <td>{{selectedSeason.speakers.length}}</td>
                                                 </tr>
                                             </table>
@@ -61,19 +61,19 @@
                                             <table st-table="rowCollection"
                                                    class="table table-striped speaker-info-table">
                                                 <tr>
-                                                    <td>Number Of Speachs:</td>
+                                                    <td>Number of speeches:</td>
                                                     <td>{{selectedSeason.number_of_replicas}}</td>
                                                 </tr>
                                                 <tr>
-                                                    <td>Longest Speach:</td>
+                                                    <td>Longest speech:</td>
                                                     <td>{{selectedSeason.replicas_length_max}}</td>
                                                 </tr>
                                                 <tr>
-                                                    <td>Shortest Speach:</td>
+                                                    <td>Shortest speech:</td>
                                                     <td>{{selectedSeason.replicas_length_min}}</td>
                                                 </tr>
                                                 <tr>
-                                                    <td>Speach Length Median:</td>
+                                                    <td>Speach length median:</td>
                                                     <td>{{selectedSeason.replicas_length_med}}</td>
                                                 </tr>
 
@@ -83,15 +83,15 @@
                                             <table st-table="rowCollection"
                                                    class="table table-striped speaker-info-table">
                                                 <tr>
-                                                    <td>Speach Length Total:</td>
+                                                    <td>Speach length total:</td>
                                                     <td>{{selectedSeason.replicas_length_total}}</td>
                                                 </tr>
                                                 <tr>
-                                                    <td>Average Speach Length:</td>
+                                                    <td>Average speech length:</td>
                                                     <td>{{(selectedSeason.replicas_length_avg).toFixed(2)}}</td>
                                                 </tr>
                                                 <tr>
-                                                    <td>Median Speach Length:</td>
+                                                    <td>Median speech length:</td>
                                                     <td>{{selectedSeason.replicas_length_med}}</td>
                                                 </tr>
                                             </table>
@@ -223,13 +223,13 @@
                                     <thead>
                                     <tr>
                                         <th>Name</th>
-                                        <th>Number Of Replicas</th>
-                                        <th>Longest Replic</th>
-                                        <th>Shortest Replic</th>
-                                        <th>Average Replic Length</th>
-                                        <th>Replic Length Median</th>
-                                        <th>Total Length Of Replics</th>
-                                        <th>Tv Show Replic Percentage</th>
+                                        <th>Number Of Speeches</th>
+                                        <th>Longest Speech</th>
+                                        <th>Shortest Speech</th>
+                                        <th>Average Speech Length</th>
+                                        <th>Speech Length Median</th>
+                                        <th>Total Length Of Speeches</th>
+                                        <th>Tv Show Speech Percentage</th>
                                         <th>Tv Show Word Percentage</th>
                                         <th>Appeared in episodes</th>
                                     </tr>
