speach length download season

--- a/assets/templates/single_speaker_statistics.html
+++ b/assets/templates/single_speaker_statistics.html
@@ -144,15 +144,15 @@
                                                 <td>{{selectedSpeaker.name}}</td>
                                             </tr>
                                             <tr>
-                                                <td>Number Of Speeches:</td>
+                                                <td>Number of speeches:</td>
                                                 <td>{{selectedSpeaker.number_of_replicas}}</td>
                                             </tr>
                                             <tr>
-                                                <td>Longest Speech:</td>
+                                                <td>Longest speech:</td>
                                                 <td>{{selectedSpeaker.replicas_length_max}}</td>
                                             </tr>
                                             <tr>
-                                                <td>Shortest Speech:</td>
+                                                <td>Shortest speech:</td>
                                                 <td>{{selectedSpeaker.replicas_length_min}}</td>
                                             </tr>
 
@@ -162,20 +162,20 @@
                                         <table st-table="rowCollection" class="table table-striped speaker-info-table">
 
                                             <tr>
-                                                <td>Percentage Of Speeches In Show:</td>
+                                                <td>Percentage of speeches in show:</td>
                                                 <td>{{((selectedSpeaker.replik_percentage)*100).toFixed(2)}} %</td>
                                             </tr>
 
                                             <tr>
-                                                <td>Percentage Of Words In Show:</td>
+                                                <td>Percentage of words in show:</td>
                                                 <td>{{((selectedSpeaker.word_percentage)*100).toFixed(2)}} %</td>
                                             </tr>
                                             <tr>
-                                                <td>Average Speech Length:</td>
+                                                <td>Average speech length:</td>
                                                 <td>{{(selectedSpeaker.replicas_length_avg).toFixed(2)}}</td>
                                             </tr>
                                             <tr>
-                                                <td>Median Speech Length:</td>
+                                                <td>Median speech length:</td>
                                                 <td>{{(selectedSpeaker.replicas_length_med).toFixed(2)}}</td>
                                             </tr>
                                         </table>
@@ -187,19 +187,19 @@
                                                 <td>{{selectedSpeaker.dist_word_count}}</td>
                                             </tr>
                                             <tr>
-                                                <td>Percentage of Nouns:</td>
+                                                <td>Percentage of nouns:</td>
                                                 <td>{{selectedSpeaker.noun_count}}</td>
                                             </tr>
                                             <tr>
-                                                <td>Total Number Of Verbs:</td>
+                                                <td>Total number of verbs:</td>
                                                 <td>{{selectedSpeaker.verb_count}}</td>
                                             </tr>
                                             <tr>
-                                                <td>Total Number of Adverbs:</td>
+                                                <td>Total number of adverbs:</td>
                                                 <td>{{selectedSpeaker.adverb_count}}</td>
                                             </tr>
                                             <tr>
-                                                <td>Total Number of Adjectives:</td>
+                                                <td>Total number of adjectives:</td>
                                                 <td>{{selectedSpeaker.adjective_count}}</td>
                                             </tr>
 
