--- a/assets/templates/speaker-comparison.html
+++ b/assets/templates/speaker-comparison.html
@@ -253,15 +253,15 @@
                                                     <td>{{speaker1.name}}</td>
                                                 </tr>
                                                 <tr>
-                                                    <td>Number Of Replicas:</td>
+                                                    <td>Number of speeches:</td>
                                                     <td>{{speaker1.number_of_replicas}}</td>
                                                 </tr>
                                                 <tr>
-                                                    <td>Longest Replic:</td>
+                                                    <td>Longest speech:</td>
                                                     <td>{{speaker1.replicas_length_max}}</td>
                                                 </tr>
                                                 <tr>
-                                                    <td>Shortest Replic:</td>
+                                                    <td>Shortest speech:</td>
                                                     <td>{{speaker1.replicas_length_min}}</td>
                                                 </tr>
 
@@ -272,24 +272,24 @@
                                                    class="table table-striped speaker-info-table">
 
                                                 <tr>
-                                                    <td>Percentage Of Replics In Show:</td>
+                                                    <td>Percentage of speeches in show:</td>
                                                     <td>{{((speaker1.replik_percentage)*100).toFixed(2)}}
                                                         %
                                                     </td>
                                                 </tr>
 
                                                 <tr>
-                                                    <td>Percentage Of Words In Show:</td>
+                                                    <td>Percentage of words in show:</td>
                                                     <td>{{((speaker1.word_percentage)*100).toFixed(2)}}
                                                         %
                                                     </td>
                                                 </tr>
                                                 <tr>
-                                                    <td>Average Replic Length:</td>
+                                                    <td>Average speech length:</td>
                                                     <td>{{speaker1.replicas_length_avg.toFixed(2)}}</td>
                                                 </tr>
                                                 <tr>
-                                                    <td>Median Replic Length:</td>
+                                                    <td>Median speech length:</td>
                                                     <td>{{speaker1.replicas_length_med}}</td>
                                                 </tr>
                                             </table>
@@ -311,15 +311,15 @@
                                                     <td>{{speaker2.name}}</td>
                                                 </tr>
                                                 <tr>
-                                                    <td>Number Of Replicas:</td>
+                                                    <td>Number of speeches:</td>
                                                     <td>{{speaker2.number_of_replicas}}</td>
                                                 </tr>
                                                 <tr>
-                                                    <td>Longest Replic:</td>
+                                                    <td>Longest speech:</td>
                                                     <td>{{speaker2.replicas_length_max}}</td>
                                                 </tr>
                                                 <tr>
-                                                    <td>Shortest Replic:</td>
+                                                    <td>Shortest speech:</td>
                                                     <td>{{speaker2.replicas_length_min}}</td>
                                                 </tr>
 
@@ -330,24 +330,24 @@
                                                    class="table table-striped speaker-info-table">
 
                                                 <tr>
-                                                    <td>Percentage Of Replics In Show:</td>
+                                                    <td>Percentage of speeches in show:</td>
                                                     <td>{{((speaker2.replik_percentage)*100).toFixed(2)}}
                                                         %
                                                     </td>
                                                 </tr>
 
                                                 <tr>
-                                                    <td>Percentage Of Words In Show:</td>
+                                                    <td>Percentage of words in show:</td>
                                                     <td>{{((speaker2.word_percentage)*100).toFixed(2)}}
                                                         %
                                                     </td>
                                                 </tr>
                                                 <tr>
-                                                    <td>Average Replic Length:</td>
+                                                    <td>Average speech length:</td>
                                                     <td>{{speaker2.replicas_length_avg.toFixed(2)}}</td>
                                                 </tr>
                                                 <tr>
-                                                    <td>Median Replic Length:</td>
+                                                    <td>Median speech length:</td>
                                                     <td>{{speaker2.replicas_length_med}}</td>
                                                 </tr>
                                             </table>
